# my-project

./: Dockerfile  Doxyfile
html/: md_README.html  pages.html
html/search/: all_0.js  pages_1.js
latex/: md_README.tex
src/: main.cpp
tests/: CMakeLists.txt
